Prefix all endpoints with api/
